--- a/templates/pages/info.html
+++ b/templates/pages/info.html
@@ -10,7 +10,7 @@
             <h1 class="flex-grow-1">Redirection - {{ redirection.name }}</h1>
             <div class="d-flex align-items-center">
                 <div class="btn-group">
-                    <a href="/" class="btn btn-primary ml-3">Back</a>
+                    <a href="/admin" class="btn btn-primary ml-3">Back</a>
                     <a href="/edit/{{ redirection.id }}" class="btn btn-warning ml-3">Edit</a>
                     <a href="/delete/{{ redirection.id }}" class="btn btn-danger ml-3">Delete</a>
                 </div>
