--- a/static/css/bases/base_style.css
+++ b/static/css/bases/base_style.css
@@ -5,62 +5,67 @@
     src: url(/static/font/Rubik/Rubik-VariableFont_wght.ttf) format('ttf');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-:root{
-    margin: 0;
-    padding: 0;
-}
 
 body{
-    height: 100%;
-    background-color: #222222;
+    background: transparent;
 }
 
-.flash{
-    position: relative;
-    padding: 20px 16px;
-    border-style: solid;
-    margin-top: -1px;
-    border-width: 1px 0;
-    border-radius: 0;
+.no-link{
+    text-decoration: none !important;
+    color: red !important;
 }
-.flash.flash-warn{
-    border-color: #624711;
-    background-color: #272115;
+footer *{
+    font-family: 'Rubik', sans-serif;
+    font-size: 0.9375rem;
+    font-weight: 400;
+    line-height: 1.5;
+    text-decoration: none;
 }
-.flash.flash-error{
-    border-color: #6c1f1f;
-    background-color: #2c0e0e;
+footer h5{
+    font-size: 1.171875rem;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    line-height: 1.2;
 }
-.flash.flash-success{
-    border-color: #1f6c1f;
-    background-color: #0e2c0e;
+.footer-copyright{
+    background-color: #1a191c;
 }
-.flash.flash-info{
-    border-color: #1f6c6c;
-    background-color: #0e2c2c;
+
+.row{
+    margin: 0;
+}
+.btn{
+    transition: all .2s;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.form-control{
+    color: #fff !important;
+    transition: all .2s;
+    background-color: rgba(10, 10, 10, .4);
+    outline: none !important;
+    box-shadow: none !important;
+    border: 1px solid #222 !important;
+}
+.form-control:hover{
+    background-color: rgba(10, 10, 10, .5);
+}
+.form-control:active, .form-control:focus{
+    background-color: rgba(10, 10, 10, .6);
 }
 
 ::-webkit-scrollbar {
     width: 4px;
     height: 4px;
 }
-::-webkit-scrollbar-thumb {
-    border-radius: 25px;
-}
 ::-webkit-scrollbar-track {
     background: rgb(102, 102, 102);
 }
 ::-webkit-scrollbar-thumb {
     background: #888;
+    border-radius: 25px;
 }
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
-}
-body, *{
-    scrollbar-width: thin !important;
-    scrollbar-color: #888 #555;
-}
-
-.main-container{
-    min-height: 100svh;
 }
