--- a/templates/bases/main_base.html
+++ b/templates/bases/main_base.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{{ app_name }}{% block subtitle %}{% endblock %}{% endblock %}</title>
+    <title>{{ app_name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="theme-color" content="#375a7f">
@@ -10,16 +10,18 @@
     <link rel="stylesheet" href="/static/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/bases/base_style.css">
 
+    <link rel="stylesheet" href="/static/font/material_icons/material_icons.css">
+
     <script src="/static/bootstrap/bootstrap.bundle.min.js" defer></script>
 
     {% block base_head %}{% endblock %}
     {% block head %}{% endblock %}
 </head>
 <body>
+    {% block nav %}{% endblock %}
+
     {% block body %}{% endblock %}
 
-    {% block footer %}
-        {% include "components/footer.html" %}
-    {% endblock %}
+    {% block footer %}{% endblock %}
 </body>
 </html>
